--- a/SyncAdapterLab/app/src/main/res/layout/content_main.xml
+++ b/SyncAdapterLab/app/src/main/res/layout/content_main.xml
@@ -12,6 +12,12 @@
     tools:context="anthony.example.com.syncadapterlab.MainActivity"
     tools:showIn="@layout/activity_main">
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        android:layout_centerHorizontal="true"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
